--- a/index1.html
+++ b/index1.html
@@ -26,7 +26,7 @@
                 <a href="https://detect-diabetes-webapp.herokuapp.com/" class="mainlink">Lets Check</a>
                 <a href="#information">Help</a>
                 <a href="#Footer">About</a>
-                <a href="index1.html">Signout</a>
+                <a href="index.html">Signout</a>
             </div>
         </div>
 
